# huber

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.build  Dockerfile.dev  Makefile  README.md  justfile  renovate.json5  rustfmt.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tool_request.md
.github/workflows/: base.yaml  build-windows.yaml  build.yaml  build_new.yaml  buildx.yaml  page.yaml  pr.yaml  release.yaml
app/: Cargo.toml
app/src/: main.rs
app/src/cmd/: info.rs  install.rs  list.rs  mod.rs  root.rs  search.rs  show.rs  uninstall.rs
app/src/component/: executor.rs  github.rs
app/src/model/: release.rs
app/src/service/: context.rs  datastore.rs  mod.rs  release.rs
common/: Cargo.toml
common-pm/: Cargo.toml
common-pm/src/: lib.rs
common/src/: lib.rs
crates/app/: Cargo.toml  build.rs
crates/app/src/: main.rs
crates/app/src/cmd/: current.rs  info.rs  install.rs  mod.rs  reset.rs  self_update.rs  show.rs  uninstall.rs  update.rs
crates/app/src/cmd/config/: mod.rs  show.rs  update.rs
crates/app/src/cmd/repo/: add.rs  mod.rs  remove.rs
crates/app/src/service/: cache.rs  mod.rs  package.rs  release.rs  repo.rs  update.rs
crates/common/: Cargo.toml
crates/common/src/: file.rs  lib.rs  log.rs  str.rs
crates/common/src/model/: config.rs  package.rs  repo.rs
crates/generator/: Cargo.toml
crates/generator/src/: build.rs  lib.rs
crates/generator/src/pkg/: ali.rs  arkade.rs  axelard.rs  bat.rs  buf.rs  camel_k.rs  cloak.rs  consul.rs  containerd.rs  ctlptl.rs  czkawka.rs  delta.rs  direnv.rs  dive.rs  dolt.rs  drone_cli.rs  exa.rs  fission.rs  flux2.rs  fortio.rs  frum.rs  gh.rs  gitui.rs  go.rs  grex.rs  helm.rs  helmfile.rs  hetty.rs  huber.rs  hugo.rs  hyperfine.rs  hypper.rs  ignite.rs  jless.rs  jq.rs  jwt_cli.rs  k0s.rs  k3ai.rs  k3d.rs  k3s.rs  (+63 more)
crates/procmacro/: Cargo.toml
crates/procmacro/src/: lib.rs
doc/: packages.md
docs/: book.toml  packages.md
docs/book/: 404.html  index.html  print.html
docs/src/: README.md  SUMMARY.md
docs/src/cmd/: completions.md  config.md  current.md  flush.md  info.md  install.md  load.md  lock.md  repo.md  reset.md  save.md  search.md  self-update.md  show.md  uninstall.md  unlock.md  update.md
docs/src/contributing/: add-package.md  huber-managed-packages.md
examples/: huber.yaml
generated-v1/: index.yaml
hack/: build-multiarch.sh  generate-artifact-checksum.sh  generate-artifact-name.sh  generate-huber-managed-packages.sh  generate-huber-packages.sh  generate-packages.md.sh  huber-artifact-name.sh  install-huber.sh  install.sh  run-make-by-docker.sh  setup-dev.ps1  setup-dev.sh  update-env.sh
hack/windows/: generate-artifact-checksum.ps1  install.ps1  release.ps1  setup-dev.ps1  upload-release-asset.ps1
huber/: Cargo.toml  build.rs
huber-common/: Cargo.toml
huber-common/src/: compress.rs  file.rs  fs.rs  lib.rs  log.rs  progress.rs  str.rs
huber-common/src/model/: config.rs  mod.rs  package.rs  release.rs
huber-generator/: Cargo.toml
huber-generator/src/: build.rs
huber-generator/src/pkg/: ali.rs  argocd.rs  arkade.rs  asdf.rs  axelard.rs  bat.rs  bottom.rs  buf.rs  bun.rs  camel_k.rs  chisel.rs  choose.rs  cloak.rs  cni_plugins.rs  codeql.rs  compose.rs  conftest.rs  consul.rs  containerd.rs  copilot_cli.rs  coreutils.rs  cosign.rs  croc.rs  ctlptl.rs  czkawka.rs  dasel.rs  delta.rs  deno.rs  direnv.rs  dive.rs  doctl.rs  dog.rs  dolt.rs  drone_cli.rs  dua_cli.rs  dust.rs  eksctl.rs  epinio.rs  exa.rs  faas_cli.rs  (+144 more)
huber-procmacro/: Cargo.toml
huber-procmacro/src/: lib.rs
huber/src/: error.rs  file.rs  fs.rs  gh.rs  github.rs  lib.rs  opt.rs  os.rs  parse.rs  semver.rs
huber/src/cmd/: config.rs  current.rs  flush.rs  info.rs  install.rs  load.rs  lock.rs  mod.rs  repo.rs  reset.rs  save.rs  search.rs  self_update.rs  show.rs  uninstall.rs  unlock.rs  update.rs
huber/src/cmd/option/: parser.rs
huber/src/model/: config.rs  package.rs  release.rs  repo.rs
huber/src/service/: cache.rs  config.rs  mod.rs  package.rs  release.rs  repo.rs  update.rs
huber/tests/: completions.rs  config.rs  current.rs  flush.rs  info.rs  install.rs  load.rs  lock.rs  repo.rs  reset.rs  save.rs  uninstall.rs  unlock.rs  update.rs
huber/tests/common/: mod.rs
src/: main.rs
src/app/: Cargo.toml  build.rs
src/app/src/: main.rs
src/app/src/cmd/: current.rs  flush.rs  info.rs  install.rs  list.rs  mod.rs  refresh.rs  reset.rs  root.rs  search.rs  self_update.rs  show.rs  uninstall.rs  update.rs
src/app/src/cmd/config/: mod.rs  show.rs  update.rs
src/app/src/cmd/repo/: add.rs  list.rs  mod.rs  remove.rs
src/app/src/component/: compress.rs  executor.rs  github.rs  mod.rs
src/app/src/service/: cache.rs  config.rs  context.rs  datastore.rs  mod.rs  package.rs  release.rs  repo.rs  update.rs
src/base/: config.rs  di.rs  log.rs  mod.rs
src/cmd/: info.rs  install.rs  list.rs  mod.rs  root.rs  search.rs  show.rs  uninstall.rs
src/common/: Cargo.toml
src/common/src/: config.rs  di.rs  file.rs  lib.rs  log.rs  macro_rule.rs  macrorule.rs  progress.rs  str.rs
src/common/src/model/: config.rs  context.rs  mod.rs  package.rs  release.rs  repo.rs
src/common/src/output/: console.rs  factory.rs  json.rs  mod.rs  yaml.rs
src/component/: executor.rs  github.rs  mod.rs
src/generator/: Cargo.toml
src/generator/src/: build.rs  lib.rs
src/generator/src/pkg/: ali.rs  argocd.rs  arkade.rs  bat.rs  bottom.rs  camel_k.rs  chisel.rs  cloak.rs  codeql.rs  conftest.rs  consul.rs  containerd.rs  copilot_cli.rs  coreutils.rs  cosign.rs  croc.rs  ctlptl.rs  czkawka.rs  dasel.rs  deno.rs  direnv.rs  dive.rs  doctl.rs  dog.rs  drone_cli.rs  dua_cli.rs  dust.rs  eksctl.rs  epinio.rs  exa.rs  faas_cli.rs  fd.rs  firecracker.rs  fission.rs  fleet.rs  flux2.rs  fnm.rs  fortio.rs  gh.rs  gitui.rs  (+108 more)
src/model/: context.rs  mod.rs  release.rs
src/procmacro/: Cargo.toml
src/procmacro/src/: lib.rs
src/release/: Cargo.toml
src/release/src/: lib.rs
src/service/: cache.rs  context.rs  datastore.rs  mod.rs  release.rs
(+3 files in other folders)
