[workspace]
members = ["huber", "huber-common", "huber-generator", "huber-procmacro"]
default-members = ["huber", "huber-common", "huber-procmacro"]
exclude = ["huber-generator"]
resolver = "2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace.package]
version = "1.0.0"
description = "Huber, simplify GitHub package management"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2021"
keywords = ["github", "package-management", "cli"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
homepage = "https://github.com/innobead/huber"
repository = "https://github.com/innobead/huber"
readme = "README.md"
license-file = "LICENSE"

[workspace.dependencies]
huber-common = { path = "huber-common", version = "1.0.0" }
huber-procmacro = { path = "huber-procmacro", version = "1.0.0" }
libcli-rs = "0.1.4"
clap = { version = "4.5.21", features = ["env", "derive"] }
log = "0.4"
env_logger = "0.11.5"
lazy_static = "1.4.0"
anyhow = "1.0"
dirs = "5.0.0"
semver = "1.0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.19"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "native-tls-vendored"] }
tokio = { version = "1.27", features = ["full"] }
regex = "1.4.1"
futures = "0.3"
async-trait = "0.1.64"
git2 = { version = "0.20.0", features = ["vendored-libgit2", "vendored-openssl"] }
chrono = "0.4"
symlink = "0.1.0"
is_executable = "1.0.1"
urlencoding = "2.1.2"
url = "2"
fs_extra = "1.1"
maplit = "1.0"
rayon = "1.6"
simpledi-rs = "0.1.0"
quote = "1.0"
octocrab = "0.42.1"
syn = "2.0.90"
fs2 = "0.4.3"
clap_complete = "4.5.40"
thiserror = "2.0.9"
scopeguard = "1.1.0"
better-panic = "0.3.0"
filepath = "0.2.0"
tar = "0.4.43"
xz2 = "0.1.0"
flate2 = "1.0.19"
zip = { version = "2.2.2", default-features = false, features = ["deflate-zlib-ng"] }
