[package]
name = "huber"
version = "0.1.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
huber-common = { path = "../common" }
huber-common-pm = { path = "../common-pm" }
clap = "2"
log = "0.4"
fern = "0.5"
lazy_static = "1.4.0"
anyhow = "1.0"
thiserror = "1.0"
dirs = "3.0.1"
semver = "0.11.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.13"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.3", features = ["full"] }
hubcaps = "0.6"
flate2 = "1.0.18"
tar = "0.4"
regex = "1.4.1"
futures = "0.3"
async-trait = "0.1.41"
