[package]
name = "huber-generator"
description = "Internal package used by Huber"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
license-file = "../LICENSE"
build = "src/build.rs"

[build-dependencies]
anyhow.workspace = true
huber-common.workspace = true
maplit.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dependencies]
anyhow.workspace = true
huber-common.workspace = true
maplit.workspace = true
octocrab.workspace = true
