[package]
name = "huber-generator"
description = "Internal package used by Huber"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
license-file.workspace = true
build = "src/build.rs"

[build-dependencies]
anyhow.workspace = true
huber = { path = "../huber", version = "1.0.11" }
maplit.workspace = true
octocrab.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true

[dependencies]
anyhow.workspace = true
huber = { path = "../huber", version = "1.0.11" }
maplit.workspace = true
octocrab.workspace = true
