[package]
name = "huber"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
publish = true

[[bin]]
name = "huber"
path = "src/bin/huber.rs"

[build-dependencies]
chrono.workspace = true

[dev-dependencies]
assert_cmd = "2.0.16"
sequential-test = "0.2.4"
tempfile = "3.15.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
better-panic.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
dirs.workspace = true
filepath.workspace = true
fs2.workspace = true
fs_extra.workspace = true
futures.workspace = true
git2.workspace = true
huber-common.workspace = true
huber-procmacro.workspace = true
is_executable.workspace = true
lazy_static.workspace = true
libcli-rs.workspace = true
log.workspace = true
maplit.workspace = true
octocrab.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
scopeguard.workspace = true
semver.workspace = true
serde.workspace = true
serde_yaml.workspace = true
simpledi-rs.workspace = true
symlink.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true
urlencoding.workspace = true
