[package]
name = "huber"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
license-file = "../../LICENSE"

[build-dependencies]
chrono.workspace = true

[dependencies]
huber-common.workspace = true
huber-procmacro.workspace = true
libcli-rs.workspace = true
clap.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
dirs.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
tokio.workspace = true
hubcaps-ex.workspace = true
compress-tools.workspace = true
derive_more.workspace = true
regex.workspace = true
futures.workspace = true
async-trait.workspace = true
git2.workspace = true
chrono.workspace = true
symlink.workspace = true
is_executable.workspace = true
urlencoding.workspace = true
url.workspace = true
Inflector.workspace = true
fs_extra.workspace = true
maplit.workspace = true
rayon.workspace = true
fs2.workspace = true
simpledi-rs.workspace = true
array_tool.workspace = true