[package]
name = "huber-common"
version.workspace = true
description = "Internal package used by Huber"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
license-file = "../../LICENSE"

[dependencies]
log.workspace = true
pretty_env_logger.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
hubcaps-ex.workspace = true
prettytable-rs.workspace = true
Inflector.workspace = true
chrono.workspace = true
regex.workspace = true
maplit.workspace = true
semver.workspace = true
indicatif.workspace = true
libcli-rs.workspace = true