[package]
name = "huber-generator"
version.workspace = true
description = "Internal package used by Huber"
authors.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
license-file = "../../LICENSE"
build = "src/build.rs"

[build-dependencies]
huber-common.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
hubcaps-ex.workspace = true
maplit.workspace = true

[dependencies]
huber-common.workspace = true
maplit.workspace = true
