[package]
name = "huber-procmacro"
version = "0.3.8"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2021"
rust-version = "1.62"
description = "Interal package used by Huber"
homepage = "https://github.com/innobead/huber"
repository = "https://github.com/innobead/huber"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
huber-common = { path = "../common", version = "0.3.8" }
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
fs2 = "0.4.3"
dirs = "3.0.1"
log = "0.4"
anyhow = "1.0"