[package]
name = "huber-procmacro"
version.workspace = true
description = "Internal package used by Huber"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "../../README.md"
license-file = "../../LICENSE"

[lib]
proc-macro = true

[dependencies]
huber-common.workspace = true
proc-macro2 = "1.0"
syn = "2.0.14"
quote = "1.0"
fs2.workspace = true
dirs.workspace = true
log.workspace = true
anyhow.workspace = true