[package]
name = "huber"
version = "0.2.5"
description = "Huber package, simplify `GitHub release` package management with a live awesome list of GitHub project"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"
keywords = ["github", "package management", "package"]
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
homepage = "https://github.com/innobead/huber"
repository = "https://github.com/innobead/huber"
readme = "README.md"
license-file = "LICENSE"

[build-dependencies]
chrono = "0.4"

[dependencies]
huber-common = { path = "../common" }
huber-procmacro = { path = "../procmacro" }
clap = "2"
log = "0.4"
pretty_env_logger = "0.3"
lazy_static = "1.4.0"
anyhow = "1.0"
dirs = "3.0.1"
semver = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.13"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] } # reqwest 0.10, hubcaps 0.6 does not support tokio 0.3/1.0 yet, ref: https://github.com/seanmonstar/reqwest/issues/1060
#hubcaps = { git = "https://github.com/softprops/hubcaps", rev = "324d02fbb371782c82e9a13b839b86894475c91f" } # wait for hubcaps formal release > 0.6
hubcaps = { git = "https://github.com/innobead/hubcaps" }
compress-tools = "0.8"
regex = "1.4.1"
futures = "0.3"
async-trait = "0.1.41"
git2 = "0.13"
chrono = "0.4"
symlink = "0.1.0"
is_executable = "0.1.2"
urlencoding = "1"
url = "2"
Inflector = "0.1.6"
fs_extra = "1.1"
maplit = "1.0"
rayon = "1.5"
fs2 = "0.4.3"
simpledi-rs = "*"
