[package]
name = "huber-common"
version = "0.2.5"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
lazy_static = "1.4.0"
anyhow = "1.0"
dirs = "3.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8.13"
#hubcaps = { git = "https://github.com/softprops/hubcaps", rev = "324d02fbb371782c82e9a13b839b86894475c91f" } # wait for hubcaps formal release > 0.6
hubcaps = { git = "https://github.com/innobead/hubcaps" }
prettytable-rs = "0.8"
Inflector = "*"
chrono = "0.4"
regex = "1.4"
maplit = "1.0"
semver = "0.11"
indicatif = "0.15"