[package]
name = "huber-generator"
version = "0.1.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
huber-common = { path = "../common" }
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.13"
tokio = { version = "0.2", features = ["full"] } # reqwest does not support tokio 0.3 yet, ref: https://github.com/seanmonstar/reqwest/issues/1060
hubcaps = "0.6"
maplit = "1.0.2"

[dependencies]
huber-common = { path = "../common" }
maplit = "1.0.2"
