[package]
name = "huber-generator"
version = "0.3.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
huber-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.13"
tokio = { version = "1.0", features = ["full"] } #  reqwest 0.10, hubcaps 0.6 does not support tokio 0.3/1.0 yet, ref: https://github.com/seanmonstar/reqwest/issues/1060
#hubcaps = { git = "https://github.com/softprops/hubcaps", rev = "324d02fbb371782c82e9a13b839b86894475c91f" } # wait for hubcaps formal release > 0.6
hubcaps = { git = "https://github.com/innobead/hubcaps" }
maplit = "1.0"

[dependencies]
huber-common = { path = "../common" }
maplit = "1.0"
