[package]
name = "huber-procmacro"
version = "0.1.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
huber-common = { path = "../common" }
log = "0.4"
fern = "0.5"
lazy_static = "1.4.0"
thiserror = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.13"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

