[package]
name = "huber-procmacro"
version = "0.1.0"
authors = ["David Ko <innobead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
#huber-common = { path = "../common" }
#thiserror = "1.0"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

